use json unmarshal if content-type not declared
